--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,13 @@ main {
     padding-top: 3%;
 }
 
-
+a.skip{
+    background: white;
+    left: 0;
+    padding: 6px;
+    position: absolute;
+    top: -40px;
+  }
 nav li {
     color: #f2f2f2;
     font-size: 20px;
@@ -150,7 +156,7 @@ input[type=submit] {
     opacity: 0;}
 
     to {
-    width: 400px;
+    width: 200px;
     opacity: 1;}
 }
 
